--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  diagonal_scrollview: ^0.2.0
-  lottie: ^0.7.0+1
-  fluttie: ^0.5.0
+  cupertino_icons: ^1.0.4
+  diagonal_scrollview: ^0.2.0+1
+  lottie: ^1.3.0
+ 
 
 dev_dependencies:
   flutter_test:
