--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .buildlog/
 .history
 .svn/
+.env/
 
 # IntelliJ related
 *.iml
@@ -39,3 +40,5 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+android/key.properties
+*.jks
