--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   single_child_two_dimensional_scroll_view: ^0.0.2
   lottie: ^3.1.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
